static/less/main.less
@okf-primary: rgb(122, 184, 0);
@okf-secondary: rgb(255, 0, 0);
@okf-secondary-alt: rgb(0, 165, 224);
@okf-darkgrey: rgb(45, 45, 45);
@okf-midgrey: rgb(142, 142, 142);
@okf-lightgrey: rgb(240, 240, 240);

@okf-link: @okf-primary;

@bootstrap-root: "../vendor/bootstrap/less";

// Import Twitter Bootstrap variables and mixins
@import "@{bootstrap-root}/variables.less";
@import "@{bootstrap-root}/mixins.less";

// Import Font Awesome
@import "../vendor/font-awesome/less/font-awesome.less";

// Base text colours
@text-color: @okf-darkgrey;
@link-color: @okf-link;

// Navbar
@navbar-height: 60px;
@navbar-default-color: @okf-darkgrey;
@navbar-default-bg: @okf-lightgrey;
@navbar-default-link-color: @okf-darkgrey;
@navbar-default-link-hover-color: @okf-midgrey;
@navbar-default-link-hover-bg: darken(@navbar-default-bg, 3%);
@navbar-default-link-active-color: @okf-midgrey;

// Navbar toggle
@navbar-default-toggle-hover-bg: darken(@navbar-default-bg, 3%);
@navbar-default-toggle-icon-bar-bg: #fff;
@navbar-default-link-hover-bg: darken(@navbar-default-bg, 6.5%);

// Fix up path to glyphicon fonts
@icon-font-path: "../vendor/bootstrap/fonts/";

// Import the rest of Bootstrap
@import "bootstrap.less";

@header-padding: 15px;
@header-font-size: 16px;
@header-nav-font-size: 16px;
@header-height: @header-font-size + @header-padding * 2;
// The (secondary) nav
@header-nav-padding: (@header-height - @header-nav-font-size) / 2;
// The social buttons are 24px high
@header-soc-padding: (@header-height - 24px) / 2;

header {
  margin: 20px 0;

  #header-brand {
    .make-sm-column(6);
  }

  #header-nav {
    .make-sm-column(6);
    text-align: right;
  }

  h1 {
    margin: 0;
    padding: @header-padding 0 @header-padding 60px;
    font-size: @header-font-size;
    line-height: 1em;
    background: transparent url(../img/okf-logo-header-2x.png) left center no-repeat;
    background-size: auto 50px;
    text-transform: uppercase;
    letter-spacing: 0.23em;
    a:hover, a:focus {
      color: @okf-primary;
      text-decoration: none;
    }
  }
}

#nav-secondary {
  font-size: @header-nav-font-size;
  margin-top: @header-nav-padding;
  margin-bottom: @header-nav-padding;
  margin-right: 15px;
  margin-left: 0px;
  vertical-align: middle;
  color: @okf-midgrey;

  a:link, a:visited {
    color: @okf-darkgrey;
  }
}

#nav-social {
  vertical-align: middle;
  margin: @header-soc-padding 0;
}

#navbar-main {
  font-size: 17px;
  border-radius: 0;
  border: none;
  text-transform: lowercase;
  margin-bottom: 0;
}

// Align the first nav item with the grid.
#navbar-main-collapse > :first-child {
  @media (min-width: @grid-float-breakpoint) {
    .navbar > .container &,
    .navbar > .container-fluid & {
      margin-left: -(2 * @navbar-padding-horizontal);
    }
  }
}
// Align the last nav item with the grid.
#navbar-main-collapse > :last-child {
  @media (min-width: @grid-float-breakpoint) {
    .navbar > .container &,
    .navbar > .container-fluid & {
      margin-right: -(2 * @navbar-padding-horizontal);
    }
  }
}

// FIXME: make nav default to open without javascript on small devices

#page-banner {
  @spacing: 45px;
  padding-top: @spacing - @line-height-computed;
  padding-bottom: @spacing - (@line-height-computed / 2);
  background: @okf-primary;
  color: white;

  p {
    font-size: 20px;
    html.wf-lato-n3-active & {
      font-weight: 300;
    }
  }

  &.homepage-splash-banner {
    h2 {
      font-size: 48px;
      text-transform: uppercase;
      text-indent: -0.4em;
      line-height: 1.2em;
      // if only ... hanging-punctuation: first;
      @media (max-width: @screen-xs-max) {
        font-size: 36px;
        text-indent: 0em;
      }
    }
    p {
      font-size: 22px;
    }
    #splash-banner-pitch {
      .make-sm-column(12);
    }
  }
}

#main {
  padding-top: 30px;
  padding-bottom: 30px;
}

footer {
  margin-top: 20px;
  opacity: 0.5;
}

// Progressively enhance to web fonts
html.wf-lato-n4-active {
  body {
    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  }
}

html.wf-lato-n7-active {
  h1, h2, h3, h4, h5, h6 {
    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  }
}

.sidebar {
  em {
    color: lighten(@okf-darkgrey, 10%);
  }

  h3 {
    color: lighten(@okf-darkgrey, 10%);
    font-size: 18px;
    text-transform: uppercase;
    border-bottom: 1px solid @okf-primary;
    padding-bottom: @line-height-computed / 4;
    margin-bottom: @line-height-computed / 4;
  }

  ul {
    list-style: none;
    padding-left: 0;

    & > li {
      border-bottom: 1px dotted @okf-lightgrey;
      line-height: 1.6em;
    }
  }

}

.nav-simple {
  display: inline-block;
  list-style: none;
  margin: 0;
  padding: 0;
  li {
    display: inline;
    a {
      padding: 3px 8px;
    }
  }
}

.social-links {
  display: inline-block;

  a {
    display: inline-block;
    color: #333333;
    width: 34px;
    text-align: center;

    &.facebook:hover {
      color: #3b5998;
    }
    &.twitter:hover {
      color: #00aeef;
    }
  }
}

@feature-block-height: 250px;
@feature-block-xs-img-height: 150px;

.feature-block-text {
  color: #fff;
  background: @okf-darkgrey;
  border: 1px solid @okf-darkgrey; // forces margin uncollapse on block
  margin-bottom: 30px;
  padding: 0 15px 15px 15px;
  h3 {
    font-weight: normal;
  }
  @media (min-width: @screen-sm-min) {
    min-height: @feature-block-height;
  }
}

.feature-block-img {
  background-position: center center;
  background-size: cover;
  height: @feature-block-height;
  margin-bottom: 30px;
  @media (max-width: @screen-xs-max) {
    height: @feature-block-xs-img-height;
    margin-bottom: 0;
  }
}

.feature-globe {
  background-image: url(../img/photography/globe.jpg)
}

.feature-city {
  background-image: url(../img/photography/city-at-night.jpg)
}

.feature-okfest {
  background-image: url(../img/photography/okfest-2012-group.jpg)
}

.feature-block-primary {
  a:link, a:visited {
    color: @okf-secondary;
  }
}

.feature-block-secondary {
  a:link, a:visited {
    color: @okf-primary;
  }
}

.feature-block-tertiary {
  a:link, a:visited {
    color: @okf-secondary-alt;
  }
}

